# app/serializers/venue_serializer.rb
@@ -1,7 +1,7 @@
 # frozen_string_literal: true
 
 class VenueSerializer < ApplicationSerializer
-  attributes :id, :name, :venue_type, :created_at, :updated_at
+  attributes :id, :name, :venue_type, :latitude, :longitude, :created_at, :updated_at
 
   has_many :events, serializer: :event
 end
